Fix T37817: cycles CUDA detection problem on Windows with non-ascii paths.